@@ -1,4 +1,4 @@
-skin=Standard
+template=Standard
 style=Black
 index.columns=3
 index.rows=4
